// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should match snapshot of Body with default props. 1`] = `
<Text
  accessibilityRole="text"
  style={
    [
      {
        "color": "#2e2f32",
        "fontFamily": "Bogle",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {},
    ]
  }
  testID="Body"
>
  Test Children
</Text>
`;

exports[`Should match snapshot of Body with monospace text. 1`] = `
<Text
  accessibilityRole="text"
  style={
    [
      {
        "color": "#2e2f32",
        "fontFamily": "Bogle Mono",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
      {},
    ]
  }
  testID="Body"
>
  Test Children
</Text>
`;
